<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CaratSensor</string>
    <string name="app_name_alias">MobGopher</string>
    
    <!-- sync -->
    <string name="action_sync">Manual Feed Sync</string>
    <string name="action_add_feed">Create Feed</string>
    <string name="action_settings">Settings</string>
    
    <string name="sync_dialog_message">Syncing sensor metadata with Server. Please wait..</string>
    <string name="sync_complete_message">Sync Complete. Sensor metadata synced with Server.</string>
    
    <!-- activity name -->
    <string name="activity_name_main">CaratSensor</string>
    <string name="activity_name_view">Synced Metadata</string>
    <string name="activity_name_manage_endpoint">Manage Feed Endpoint</string>
     <string name="activity_name_create_endpoint">Create Feed Endpoint</string>
    <string name="activity_title_settings_configure_sensor">Configure Sensor</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_sensor">Sensor List</string>
    <string name="activity_title_sensor_barometer">Barometer Sensor</string>
    
    <!-- 1 --> 
    <string name="pref_type_all_sensor">All Sensor</string>
    <string name="pref_type_all_sensor_summary">Enable/Disable All Sensor</string>
    
    <!-- 1 --> 
    <string name="pref_type_accelerometer">Accelerometer</string>
    <string name="pref_type_accelerometer_summary">Enable/Disable Accelerometer</string>
    
    <!-- 2 --> 
    <string name="pref_type_magnetic_field">Magnetic Field</string>
    <string name="pref_type_magnetic_field_summary">Enable/Disable Magnetic Field</string>
    
    <!-- 3 --> 
    <string name="pref_type_orientation">Orientation</string>
    <string name="pref_type_orientation_summary">Enable/Disable Orientation</string>
    
    <!-- 4 --> 
    <string name="pref_type_gyroscope">Gyroscope</string>
    <string name="pref_type_gyroscope_summary">Enable/Disable Gyroscope</string>
    
    <!-- 5 --> 
    <string name="pref_type_light">Light</string>
    <string name="pref_type_light_summary">Enable/Disable Light</string>
    
    <!-- 6 --> 
    <string name="pref_type_pressure">Pressure</string>
    <string name="pref_type_pressure_summary">Enable/Disable Pressure</string>
    
    <!-- 7 --> 
    <string name="pref_type_temperature">Temperature</string>
    <string name="pref_type_temperature_summary">Enable/Disable Temperature</string>
    
    <!-- 8 --> 
    <string name="pref_type_proximity">Proximity</string>
    <string name="pref_type_proximity_summary">Enable/Disable Proximity</string>
    
    <!-- 9 --> 
    <string name="pref_type_gravity">Gravity</string>
    <string name="pref_type_gravity_summary">Enable/Disable Gravity</string>
    
    <!-- 10 --> 
    <string name="pref_type_linear_acceleration">Linear Acceleration</string>
    <string name="pref_type_linear_acceleration_summary">Enable/Disable Linear Acceleration</string>
    
    <!-- 11 --> 
    <string name="pref_type_rotation_vector">Rotation Vector</string>
    <string name="pref_type_rotation_vector_summary">Enable/Disable Rotation Vector</string>
    
    <!-- 12 --> 
    <string name="pref_type_relative_humidity">Relative Humidity</string>
    <string name="pref_type_relative_humidity_summary">Enable/Disable Relative Humidity</string>
    
    <!-- 13 --> 
    <string name="pref_type_ambient_temperature">Ambient Temperature</string>
    <string name="pref_type_ambient_temperature_summary">Enable/Disable Ambient Temperature</string>
    
    <!-- 14 -->
    <string name="pref_type_magnetic_field_uncalibrated">Magnetic Field Uncalibrated</string>
    <string name="pref_type_magnetic_field_uncalibrated_summary">Enable/Disable Magnetic Field Uncalibrated</string>
    
    <!-- 15 -->
    <string name="pref_type_game_rotation_vector">Game Rotation Vector</string>
    <string name="pref_type_game_rotation_vector_summary">Enable/Disable Game Rotation Vector</string>
    
    <!-- 16 -->
    <string name="pref_type_gyroscope_uncalibrated">Gyroscope Uncalibrated</string>
    <string name="pref_type_gyroscope_uncalibrated_summary">Enable/Disable Gyroscope Uncalibrated</string>
    
    <!-- 17 -->
    <string name="pref_type_significant_motion">Significant Motion</string>
    <string name="pref_type_significant_motion_summary">Enable/Disable Significant Motion</string>
    
    <!-- 18 -->
    <string name="pref_type_step_detector">Step Detector</string>
    <string name="pref_type_step_detector_summary">Enable/Disable Step Detector</string>
    
    <!-- 19 -->
    <string name="pref_type_step_counter">Step Counter</string>
    <string name="pref_type_step_counter_summary">Enable/Disable Step Counter</string>
    
    <!-- 20 -->
    <string name="pref_type_geomagnetic_rotation_vector">Geomagnetic Rotation Vector</string>
    <string name="pref_type_geomagnetic_rotation_vector_summary">Enable/Disable Geomagnetic Rotation Vector</string>
    
    <string name="pref_">Send crash reports</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_configure_sensor_setting_summary">Manage sensor information to be shared with CaratSensor community sensing application.</string>
    
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set sync frequency</string>
    
    <!-- Preference Category Sensor -->
    <string name="pref_category_title_create_feed">Create Feed</string>
    <string name="pref_category_title_manage_feed">Manage Feed</string>
    <string name="pref_category_title_choose_sensor">Choose Sensors</string>
     
    <!-- Preference Screen Items -->
    <string name="pref_key_feed_title">prefFeedTitle</string>
    <string name="pref_title_feed_title">Feed Title</string>
    <string name="pref_summary_feed_title">Set feed title</string>
    <string name="pref_dialog_title_feed_title">Enter Feed Title</string>
    
    <string name="pref_key_feed_server_name">prefFeedServerName</string>
    <string name="pref_title_feed_server_name">Feed Server Name</string>
    <string name="pref_summary_feed_server_name">Set the feed Server name</string>
    <string name="pref_dialog_title_feed_server_name">Enter Feed Server Name</string>
    
    <string name="pref_key_feed_server_url">prefFeedServerUrl</string>
    <string name="pref_title_feed_server_url">Feed Server URL</string>
    <string name="pref_summary_feed_server_url">Set the feed Server URL</string>
    <string name="pref_dialog_title_feed_server_url">Enter Feed Server URL</string>
    
    
    <string name="pref_key_feed_connection_mode">prefConnectionMode</string>
    <string name="pref_key_feed_sync_frequency">prefSyncFrequency</string>
    <string name="pref_key_feed_sync_repeat">prefSyncRepeat</string>
    <string name="pref_key_feed_manage_feed_logging">prefManageFeedLogging</string>
    <string name="pref_key_feed_manage_feed">prefManageFeed</string>
    
    
    <string name="pref_title_sync_frequency">Sync Frequency</string>
    <string name="pref_summary_sync_frequency">Set feed sync frequency</string>
    
    <string name="pref_title_connection_mode">Connection Mode</string>
    <string name="pref_summary_connection_mode">Set connection mode</string>
    
    <string name="pref_title_sync_repeat">Enable/Disable Repeat Sync</string>
    <string name="pref_summary_sync_repeat">Enable/Disable repeat sync</string>
    
    <string name="pref_title_manage_feed">Enable/Disable Feed</string>
    <string name="pref_summary_manage_feed">Enable/Disable feed</string>
    
    <string name="pref_title_manage_feed_logging">Enable/Disable Feed Logging</string>
    <string name="pref_summary_manage_feed_logging">Enable/Disable feed logging</string>
    
    <string name="pref_title_choose_sensor">Choose Sensor</string>
    <string name="pref_summary_choose_sensor">Select Sensors for Feed</string>
    
    <string name="pref_save_preferences">Save Feed Preferences</string>
    <string name="pref_cancel_preferences">Cancel</string>
    
    <!-- App Profile -->
    <string name="pref_user_name">MobGopher</string>
    <!-- 6 May 2014 -->
    <!-- <string name="pref_user_name_summary">version 0.1</string> -->
    <!-- 12 May 2014 -->
    <string name="pref_user_name_summary">version 0.2</string>
    
    <string name="pref_title_activity_config_feed">Manage Feed</string>
    <string name="pref_summary_activity_config_feed">Add/Remove Endpoint Feed</string> 
     
    <string name="pref_title_config_feed">Configure Feed</string>
    <string name="pref_title_user_profile">App Profile</string>
    <string name="pref_title_update_setting">App Settings</string>
    <string name="pref_configure_sensor_setting">Configure Sensor</string>
    
    <string-array name="listitem_menu_array">
        <item>View</item>
        <item>Delete</item>
    </string-array>
    
    <!--  Strings for possible PreferenceActivity Back/Next buttons -->
    <string name="back_button_label">Back</string>
    <string name="next_button_label">Next</string>

    <!-- Optional button to Skip a PreferenceActivity [CHAR LIMIT=20] -->
    <string name="skip_button_label">Skip</string>
    
</resources>
