<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edtxt_title_feed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:focusable="true"
            android:hint="@string/pref_dialog_title_feed_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtxt_feed_server_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/pref_dialog_title_feed_server_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtxt_feed_server_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/pref_dialog_title_feed_server_url"
            android:inputType="textUri" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="4dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_connection_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/pref_summary_connection_mode" />

        <Button
            android:id="@+id/btn_sync_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/pref_summary_sync_frequency" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="4dp"
            android:background="@android:color/darker_gray" />

        <CheckBox
            android:id="@+id/cbox_repeat_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:checked="true"
            android:text="@string/pref_title_sync_repeat"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cbox_manage_logging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:checked="true"
            android:text="@string/pref_title_manage_feed_logging"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cbox_manage_feed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:checked="true"
            android:text="@string/pref_title_manage_feed"
            android:textSize="18sp" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="4dp"
            android:background="@android:color/darker_gray" />
        
        <Button
            android:id="@+id/btn_choose_sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/pref_summary_choose_sensor" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="4dp"
            android:background="@android:color/darker_gray" />
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4.0"
            android:layout_margin="4dp"
            android:text="@string/pref_save_preferences" />
        
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
           android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_margin="4dp"
            android:text="@string/pref_cancel_preferences" />
        
        </LinearLayout>
    </LinearLayout>

</ScrollView>